--- a/tlotliso/src/index.css
+++ b/tlotliso/src/index.css
@@ -37,7 +37,19 @@
   
 }
 
+ html, body {
+  transition: background-color 0.3s ease, color 0.3s ease;
+   background-color: var(--color-bg);
+  color: var(--color-text);
  
+}
+
+body {
+  margin: 0;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
 
 
 a {
@@ -55,34 +67,35 @@ a:hover {
   border:solid var(--color-border) 1px;
 }
 
-html, body {
-  transition: background-color 0.3s ease, color 0.3s ease;
-   background-color: var(--color-bg);
-  color: var(--color-text);
- 
-}
-
-body {
-  margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
   font-size: 3.6em;
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+button{
+  
+ 
   font-size: 1.4em;
   font-weight: 500;
-  
-   background-color: var(--btn-bg-color);
   cursor: pointer;
   transition: border-color 0.25s;
+
+}
+
+.color__btn {
+   
+ background: var(--color-bg);
+  border: 1px solid var(--color-accent);
+  overflow: hidden; /* Ensures that the pseudo-element doesn't overflow the button */
+} 
+
+
+.btn__custom{
+   padding: 0.6em 1.2em;
+  border-radius: 8px;
+  border: 1px solid transparent;
+   background-color: var(--btn-bg-color);
+
 }
 button:hover {
   border-color: #646cff;
@@ -93,6 +106,8 @@ button:focus-visible {
   
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+
 
 
 
