--- a/tlotliso/src/App.css
+++ b/tlotliso/src/App.css
@@ -8,7 +8,37 @@
   padding: 2rem;
   text-align: center;
   
- 
-
 }
 
+/* Small devices (landscape phones, ≥576px) */
+@media (min-width: 576px) and (max-width: 767.98px) { }
+
+/* Medium devices (tablets, ≥768px) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+
+body {
+  margin: 0;
+  padding:0;
+ }
+h1 {
+  font-size: 30px;
+  line-height: 1.1;
+}
+
+h2 {
+  font-size: 24px;
+  line-height: 1;
+}
+
+h3 {
+  font-size: 18px;
+  line-height: 0.7;
+}
+
+p {
+  font-size: 12px;
+  line-height: 0.7;
+}
+
+
+ }
