--- a/tlotliso/src/App.css
+++ b/tlotliso/src/App.css
@@ -14,9 +14,10 @@
 @media (min-width: 576px) and (max-width: 767.98px) { }
 
 /* Medium devices (tablets, ≥768px) */
-@media (min-width: 768px) and (max-width: 991.98px) {
+@media (max-width: 768px) and (max-width: 991.98px) {
 
 body {
+  overflow-x: hidden;
   margin: 0;
   padding:0;
  }
