--- a/tlotliso/src/App.css
+++ b/tlotliso/src/App.css
@@ -22,6 +22,7 @@ body {
   padding:0;
  }
 h1 {
+  margin-top: 2px;
   font-size: 30px;
   line-height: 1.1;
 }
@@ -32,6 +33,7 @@ h2 {
 }
 
 h3 {
+  
   font-size: 18px;
   line-height: 0.7;
 }
@@ -40,6 +42,10 @@ p {
   font-size: 12px;
   line-height: 0.7;
 }
+
+h2,h3,p,a,button{
+  margin:  2rem 0;
+} 
 
 
  }
