--- a/tlotliso/src/index.css
+++ b/tlotliso/src/index.css
@@ -44,6 +44,8 @@
  
 }
 
+
+
 body {
   margin: 0;
   min-width: 320px;
@@ -108,6 +110,13 @@ button:focus-visible {
 }
 
 
+.reviews__container::first-letter {
+  font-size: 4rem;
+  font-weight: bold;
+  float: left;
+  line-height: 1;
+  padding-right: 4px;
+}
 
 
 
