--- a/tlotliso/src/index.css
+++ b/tlotliso/src/index.css
@@ -119,6 +119,17 @@ button:focus-visible {
   padding-right: 4px;
 }
 
+input::placeholder,
+textarea::placeholder {
+  color: #DDDDDD; 
+  font-size: 11px;
+  opacity: 1;  /* Ensures full opacity, especially in Firefox */
+}
+
+.submit__btn{
+  background: var(--color-border);
+  color: var(--btn-bg-color);
+}
 
 
 
