--- a/tlotliso/src/index.css
+++ b/tlotliso/src/index.css
@@ -146,3 +146,7 @@ label{
 .contact__form{
   background: var(--color-bg);
 }
+
+.form__container, .bookings__container{
+  background: var(--color-bg);
+}
